-fixed home background image -tryed to fix footer, still have to align contact form - fixed navbar and greetings message

--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -81,28 +81,29 @@
   width: 100%;
   position: absolute;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
-  padding-left: 8em;
+  /* padding-left: 8em; */
 }
 
 .contactus-message {
   width: 40%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  text-align: center;
+  justify-content:flex-start;
+  
+ 
 }
 
 .para {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
 }
-.contactus-message p {
+/* .contactus-message p {
   width: min(45%, 300px);
   margin: 0em;
   text-align: center;
-}
+} */
 .shopByCate {
   display: inline-block;
   height: 10px;
@@ -126,7 +127,7 @@
 }
 
 .weWillContact {
-  font-size: 2.5em;
+  font-size: 2.3em;
   line-height: 1.3em;
   margin-bottom: 0.3em;
 }
